--- a/react-demo/project1/src/App.css
+++ b/react-demo/project1/src/App.css
@@ -1,7 +1,12 @@
 .App {
   text-align: center;
 }
-
+*{
+    
+}
+ul li{
+    list-style-type: none;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
